--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,14 +11,18 @@ dependencies = [
     "google-generativeai>=0.8.6",
     "httpx>=0.28.1",
     "langchain>=1.2.9",
+    "langchain-google-genai>=2.0.9",
     "pydantic>=2.12.5",
     "pytest>=9.0.2",
+    "pyyaml>=6.0.2",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
+    "websockets>=13.0",
 ]
 
 [dependency-groups]
 dev = [
     "ruff>=0.15.0",
+    "pytest-asyncio>=0.25.3",
 ]
