--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
     "websockets>=13.0",
+    "mcp>=1.26.0",
+    "aiofiles>=25.1.0",
 ]
 
 [dependency-groups]
